--- a/TietoVisa/Base.lproj/Main.storyboard
+++ b/TietoVisa/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NNB-SI-efw" id="oZk-lc-2Jp">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -46,6 +46,13 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="r4L-F5-eZO">
+                        <barButtonItem key="leftBarButtonItem" title="New Game" id="kp2-cG-oy1">
+                            <connections>
+                                <segue destination="Ubw-Fi-qQX" kind="popoverPresentation" popoverAnchorBarButtonItem="kp2-cG-oy1" id="aZl-1B-MrJ">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="UX2-x8-M8P">
                             <connections>
                                 <segue destination="tm8-pJ-PDo" kind="presentation" id="MrE-95-9Zm"/>
@@ -241,55 +248,67 @@
             <point key="canvasLocation" x="1775.625" y="792.5"/>
         </scene>
         <!--Game Screen View Controller-->
-        <scene sceneID="3gu-iS-KsH">
+        <scene sceneID="IoN-tz-pMK">
             <objects>
-                <viewController id="4AP-XL-IXm" customClass="GameScreenViewController" customModule="TietoVisa" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Ubw-Fi-qQX" customClass="GameScreenViewController" customModule="TietoVisa" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="dN5-sf-nil"/>
-                        <viewControllerLayoutGuide type="bottom" id="1MJ-U4-Bdq"/>
+                        <viewControllerLayoutGuide type="top" id="B4W-cz-g7m"/>
+                        <viewControllerLayoutGuide type="bottom" id="bvd-yV-0o9"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Ewy-4S-cTK">
+                    <view key="view" contentMode="scaleToFill" id="7n8-h0-EJl">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tähän tulee kysymys: Esimerkiksi, kuka kiipesi ensimmäisenä Mount Everestille?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6b-BJ-hrC">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tähän tulee esimerkkikysymys: kuten: monta autoa ajaa formula 1 kisoissa?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UVV-Do-qVy">
                                 <rect key="frame" x="16" y="20" width="288" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="fjo-XJ-flI"/>
+                                    <constraint firstAttribute="height" constant="200" id="zFi-rE-PCM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="107-E5-gti">
-                                <rect key="frame" x="17" y="225" width="288" height="2"/>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="kQG-M8-fYk">
+                                <rect key="frame" x="16" y="225" width="288" height="2"/>
                             </progressView>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Puv-03-hS0">
-                                <rect key="frame" x="0.0" y="232" width="320" height="248"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="boB-QH-Lfz">
+                                <rect key="frame" x="16" y="232" width="288" height="248"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="enP-RF-jS7">
-                                        <rect key="frame" x="0.0" y="0.0" width="160" height="248"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1Hq-Vz-09d">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="124"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qvR-ma-nZT">
-                                                <rect key="frame" x="0.0" y="0.0" width="160" height="124"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tSi-gI-ZO6">
+                                                <rect key="frame" x="0.0" y="0.0" width="144" height="124"/>
                                                 <state key="normal" title="Vastaus 1"/>
+                                                <connections>
+                                                    <action selector="vastaus1ButtonAction:" destination="Ubw-Fi-qQX" eventType="touchUpInside" id="MAk-NQ-gb1"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTp-PR-Pwv">
-                                                <rect key="frame" x="0.0" y="124" width="160" height="124"/>
-                                                <state key="normal" title="Vastaus 3"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s8I-dL-X44">
+                                                <rect key="frame" x="144" y="0.0" width="144" height="124"/>
+                                                <state key="normal" title="Vastaus 2"/>
+                                                <connections>
+                                                    <action selector="vastaus2ButtonAction:" destination="Ubw-Fi-qQX" eventType="touchUpInside" id="yaY-N6-3v2"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ACu-OT-QVK">
-                                        <rect key="frame" x="160" y="0.0" width="160" height="248"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="dgl-cC-6Aj">
+                                        <rect key="frame" x="0.0" y="124" width="288" height="124"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FML-Sp-5wc">
-                                                <rect key="frame" x="0.0" y="0.0" width="160" height="124"/>
-                                                <state key="normal" title="Vastaus 2"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="858-hp-Muh">
+                                                <rect key="frame" x="0.0" y="0.0" width="144" height="124"/>
+                                                <state key="normal" title="Vastaus 3"/>
+                                                <connections>
+                                                    <action selector="vastaus3ButtonAction:" destination="Ubw-Fi-qQX" eventType="touchUpInside" id="L7D-jC-MUM"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9rq-CZ-BaM">
-                                                <rect key="frame" x="0.0" y="124" width="160" height="124"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RI1-5F-spU">
+                                                <rect key="frame" x="144" y="0.0" width="144" height="124"/>
                                                 <state key="normal" title="Vastaus 4"/>
+                                                <connections>
+                                                    <action selector="vastaus4ButtonAction:" destination="Ubw-Fi-qQX" eventType="touchUpInside" id="pEK-WN-Ksy"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -298,22 +317,26 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Puv-03-hS0" secondAttribute="trailing" id="3eo-f2-qFc"/>
-                            <constraint firstItem="Puv-03-hS0" firstAttribute="leading" secondItem="Ewy-4S-cTK" secondAttribute="leading" id="Dvb-yr-YdM"/>
-                            <constraint firstItem="107-E5-gti" firstAttribute="leading" secondItem="Ewy-4S-cTK" secondAttribute="leadingMargin" id="HTe-DL-FCc"/>
-                            <constraint firstItem="F6b-BJ-hrC" firstAttribute="top" secondItem="dN5-sf-nil" secondAttribute="bottom" id="OfB-54-maU"/>
-                            <constraint firstItem="Puv-03-hS0" firstAttribute="top" secondItem="107-E5-gti" secondAttribute="bottom" constant="5" id="ZoW-qj-Jmt"/>
-                            <constraint firstItem="F6b-BJ-hrC" firstAttribute="leading" secondItem="Ewy-4S-cTK" secondAttribute="leadingMargin" id="cpS-uM-Nej"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="107-E5-gti" secondAttribute="trailing" id="fE2-jp-kJR"/>
-                            <constraint firstItem="107-E5-gti" firstAttribute="top" secondItem="F6b-BJ-hrC" secondAttribute="bottom" constant="5" id="ht6-Y0-hBx"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="F6b-BJ-hrC" secondAttribute="trailing" id="qQw-4D-TT6"/>
-                            <constraint firstAttribute="bottom" secondItem="Puv-03-hS0" secondAttribute="bottom" id="vly-XM-7SQ"/>
+                            <constraint firstItem="boB-QH-Lfz" firstAttribute="top" secondItem="kQG-M8-fYk" secondAttribute="bottom" constant="5" id="52U-D7-0R7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="UVV-Do-qVy" secondAttribute="trailing" id="F2p-fO-q0q"/>
+                            <constraint firstItem="UVV-Do-qVy" firstAttribute="leading" secondItem="7n8-h0-EJl" secondAttribute="leadingMargin" id="Fcz-02-ipC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="boB-QH-Lfz" secondAttribute="trailing" id="G7g-eV-7H9"/>
+                            <constraint firstItem="bvd-yV-0o9" firstAttribute="top" secondItem="boB-QH-Lfz" secondAttribute="bottom" id="Twc-j1-NY5"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kQG-M8-fYk" secondAttribute="trailing" id="a7n-Fr-Ctp"/>
+                            <constraint firstItem="kQG-M8-fYk" firstAttribute="leading" secondItem="7n8-h0-EJl" secondAttribute="leadingMargin" id="eMO-wq-Kvu"/>
+                            <constraint firstItem="kQG-M8-fYk" firstAttribute="top" secondItem="UVV-Do-qVy" secondAttribute="bottom" constant="5" id="iV2-2L-NRv"/>
+                            <constraint firstItem="boB-QH-Lfz" firstAttribute="leading" secondItem="7n8-h0-EJl" secondAttribute="leadingMargin" id="n2S-ie-a6n"/>
+                            <constraint firstItem="UVV-Do-qVy" firstAttribute="top" secondItem="B4W-cz-g7m" secondAttribute="bottom" id="wyR-28-0Xu"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="aikaProgressBar" destination="kQG-M8-fYk" id="NF7-7q-6T9"/>
+                        <outlet property="kysymysLabel" destination="UVV-Do-qVy" id="amp-pz-G7v"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6Wv-u5-cqj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Td-Rl-u3I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1776" y="1475"/>
+            <point key="canvasLocation" x="925" y="1611"/>
         </scene>
     </scenes>
 </document>
