--- a/TietoVisa/Base.lproj/Main.storyboard
+++ b/TietoVisa/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NNB-SI-efw" id="oZk-lc-2Jp">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -245,7 +245,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Yg-wE-Jvk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1775.625" y="792.5"/>
+            <point key="canvasLocation" x="1667" y="793"/>
         </scene>
         <!--Game Screen View Controller-->
         <scene sceneID="IoN-tz-pMK">
@@ -332,11 +332,33 @@
                     <connections>
                         <outlet property="aikaProgressBar" destination="kQG-M8-fYk" id="NF7-7q-6T9"/>
                         <outlet property="kysymysLabel" destination="UVV-Do-qVy" id="amp-pz-G7v"/>
+                        <outlet property="vastaus1Button" destination="tSi-gI-ZO6" id="zOI-yU-yMw"/>
+                        <outlet property="vastaus2Button" destination="s8I-dL-X44" id="tcU-TN-5pg"/>
+                        <outlet property="vastaus3Button" destination="858-hp-Muh" id="83x-OZ-duy"/>
+                        <outlet property="vastaus4Button" destination="RI1-5F-spU" id="ozX-Iu-zSF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Td-Rl-u3I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="925" y="1611"/>
+            <point key="canvasLocation" x="941" y="1514"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="20l-K7-K9U">
+            <objects>
+                <viewController id="fWA-aJ-p2K" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZTn-Te-UT4"/>
+                        <viewControllerLayoutGuide type="bottom" id="XwS-Q8-noD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DiR-lT-uTe">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P4f-yo-pZF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1667" y="1514"/>
         </scene>
     </scenes>
 </document>
